packages/stores/tests/ui/fail_private_field.stderr
error: type `dioxus_stores_visibility_helper::__ItemStoreMarkerPrivate` is private
 --> tests/ui/fail_private_field.rs:8:13
  |
8 |     let _ = store.private_field();
  |             ^^^^^^^^^^^^^^^^^^^^^ private type
